<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Livable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_username">Username</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Strings zum Menü -->
    <string name="DrawerName">Navigation Drawer</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="menu_Wochenplan">Wochenplan</string>
    <string name="menu_todo">To-Do Liste</string>
    <string name="menu_einkaufsliste">Einkaufsliste</string>
    <string name="menu_haushaltsbuch">Haushaltsbuch</string>
    <string name="menu_home_page">Home</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="next_day">nächster</string>
    <string name="previous_day">vorheriger</string>



    <!-- Strings für den Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden oder registrieren</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="welcome">Willkommen!</string>
    <string name="invalid_username">Ungültiger Benutzername</string>
    <string name="invalid_password">Passwort muss länger als 5 Zeichen sein</string>
    <string name="login_failed">Anmeldung fehlgeschlagen</string>

    <!-- Strings für den Login -->
    <string name="menu_wg_registrierung">Wg-Registrierung</string>


    <!-- Strings für Task aus To Do -->
    <string name="todo_heute">Heute</string>
    <string name="todo_morgen">Morgen</string>
    <string name="todo_woche">Diese Woche</string>
    <string name="todo_spaeter">Später</string>
    <string name="todo_add">Hinzufügen</string>
    <string name="todo_del">Löschen</string>
    <string name="todo_edit">Bearbeiten</string>
    <string name="add_item">Artikel hinzufügen</string>

    <string name="delete_todo">Todo löschen</string>

    <!-- Strings für den Dialog zur Aufgabenhinzufügung -->
    <string name="task_description">Aufgabenbeschreibung</string>
    <string name="task_priority">Priorität</string>
    <string name="select_priority">Bitte Priorität auswählen...</string>

    <string name="task_points">Punkte</string>
    <string name="task_assignee">Zuständiger:</string>
    <string name="select_date">Datum</string>
    <string name="repeating_task">Wiederholend</string>
    <string name="repeat_on">Ab:</string>
    <string name="repeat_frequency">Häufigkeit:</string>



    <string name="task_options">Aufgabenoptionen</string>
    <string name="task_not_due">Diese Aufgabe kann nur am Fälligkeitsdatum als erledigt markiert werden.</string>
    <string name="delete_task_confirmation">Möchten Sie diese Aufgabe wirklich löschen?</string>
    <string name="delete">Löschen</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="edit_task">Aufgabe bearbeiten</string>
    <string name="add_task">Aufgabe hinzufügen</string>
    <string name="product_image">Produktbild</string>

    <!-- Einheit-Array für die Einkaufsliste -->
    <string-array name="unit_array">
        <item>Stück</item>
        <item>kg</item>
        <item>lt</item>
        <item>Dose</item>
    </string-array>

    <string-array name="priority_levels">
        <item>Niedrig</item>
        <item>Mittel</item>
        <item>Hoch</item>
    </string-array>


    <!-- Bild vergrößern (Fullscreen) -->
        <string name="fullscreen_image">Vollbildbild anzeigen</string>

        <!-- Schließen Symbol für das Vollbildbild -->
        <string name="close_image">Bild schließen</string>



    <!-- Kategorie-Array für das Haushaltsbuch -->
    <string-array name="category_array">
        <item>Haushalt</item>
        <item>Lebensmittel</item>
        <item>Gesundheit</item>
        <item>Kleidung</item>
        <item>Freizeit</item>
        <item>Transport</item>
        <item>Versicherung</item>
        <item>Bildung</item>
        <item>Unterhaltung</item>
        <item>Reisen</item>
        <item>Sonstiges</item>
    </string-array>

    <string-array name="repeat_types">
        <item>Keine</item>
        <item>Täglich</item>
        <item>Alle 2 Tage</item>
        <item>Wöchentlich</item>
    </string-array>

    <string-array name="days_of_week2">
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
        <item>Samstag</item>
        <item>Sonntag</item>
    </string-array>

    <!-- Strings für WG-Ansicht -->

    <!-- Titel -->
    <string name="title_wg_overview">WG Übersicht</string>

    <!-- Labels -->
    <string name="label_wg_address">WG Adresse:</string>
    <string name="editButton">bearbeiten</string>

    <string name="label_room_count">Anzahl Zimmer:</string>
    <string name="label_wg_size">Größe:</string>
    <string name="label_roommates">Bewohner</string>


    <!-- Weitere Strings für das Haushaltsbuch -->
    <string name="name">Haushaltsbuch</string>
    <string name="ausgaben_nach_kategorie">Ausgaben nach Kategorie</string>
    <string name="einnahme_button_text">Einnahme</string>
    <string name="ausgabe_button_text">Ausgabe</string>
    <string name="kategorie_zuhause">Zuhause</string>
    <string name="kategorie_kultur">Kultur</string>
    <string name="kategorie_gesundheit">Gesundheit &amp; Beauty</string>
    <string name="kategorie_auto">Auto</string>
    <string name="kategorie_andere">Andere</string>
    <string name="datum_label">Datum:</string>
    <string name="datum_hint">tt.mm.jjjj</string>
    <string name="error_category_required">Kategorie wählen</string>
    <string name="error_amount_required">Einnahme benötigt.</string>
    <string name="error_date_required">Datum benötigt.</string>

    <string name="left_arrow">Pfeil links</string>
    <string name="right_arrow">Pfeil rechts</string>

    <string-array name="points_options">
        <item>10</item>
        <item>20</item>
        <item>50</item>
    </string-array>

</resources>
