<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!-- HomePage Item (Startseite) -->
        <item
            android:id="@+id/nav_homepage"

        android:title="@string/menu_home_page"
            android:icon="@drawable/ic_home"
            />

        <!-- Wochenplan Item -->
        <item
            android:id="@+id/nav_wochenplan"
            android:icon="@drawable/ic_week"
            android:title="@string/menu_Wochenplan" />

        <!-- To-Do Item -->
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_todolist"
            android:title="@string/menu_todo" />

        <!-- Einkaufsliste Item -->
        <item
            android:id="@+id/nav_einkaufsliste"
            android:icon="@drawable/ic_einkaufsliste"
            android:title="@string/menu_einkaufsliste" />

        <!-- Haushaltsbuch Item -->
        <item
            android:id="@+id/nav_haushaltsbuch"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_haushaltsbuch" />
    </group>

    <!-- Logout Item -->
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logouticon"
                android:title="Abmelden" />
        </menu>
    </item>

</menu>
